<!-- Text Resources For App -->
<resources>

    <!-- App Name String -->
    <string name="app_name">C.S. Tracker</string>


    <!-- Activity Name Strings -->
    <string name="activity_default_user">Pick Default User</string>
    <string name="activity_events_extra_information">Event Information</string>
    <string name="activity_events_add">Add Event</string>
    <string name="activity_events_edit">Edit Event</string>
    <string name="activity_reminders_view">Reminders</string>
    <string name="activity_reminders_add">Add Reminder</string>
    <string name="activity_reminders_edit">Edit Reminder</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_settings_about">About</string>
    <string name="activity_settings_sync_data">Sync Data</string>
    <string name="activity_theme_picker">Pick Your Theme</string>
    <string name="activity_users_view">Users</string>
    <string name="activity_users_add">Add User</string>
    <string name="activity_users_edit">Edit User</string>


    <!-- Events View Strings -->
    <string name="date_title">Date:</string>
    <string name="date">mm/dd/yyyy</string>
    <string name="end_time">0:00</string>
    <string name="end_time_title">End Time:</string>
    <string name="location">location</string>
    <string name="location_title">Location:</string>
    <string name="name">name</string>
    <string name="name_title">Name:</string>
    <string name="notes_title">Notes:</string>
    <string name="phone_number_title">Phone Number:</string>
    <string name="people_in_charge_title">People In Charge:</string>
    <string name="start_time">0:00</string>
    <string name="start_time_title">Start Time:</string>
    <string name="total_time">0:00</string>
    <string name="total_time_title">Total Time:</string>

    <!-- Events Navigation Drawer Strings -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="night_mode">Night Mode</string>
    <string name="themes">Themes</string>
    <string name="users_mode">Users Mode</string>


    <!-- Settings About Strings -->
    <string name="changelog">1. Brand New UI \n2. Multiple Users \n3. More Themes \n4. Fixed "Order By Date" \n5. Added Search \n6. Temporarily Got Rid Of Backup, Restore, And Print Until Next Update \n7. A Ton Of Bug Fixes And Performance Enhancements</string>
    <string name="feedback">Feedback</string>
    <string name="rate_in_play_store">Rate In Play Store</string>
    <string name="version">Version</string>


    <!-- Settings Sync Data Strings -->
    <string name="sync_data">Sync Data</string>
    <string name="sync_to_a_new_device">Sync To A New Device</string>
    <string name="sync_to_this_device">Sync To This Device</string>


    <!-- Settings Themes -->
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="violet">Violet</string>
    <string name="pink">Pink</string>


    <!-- Menu Strings -->
    <string name="copy">Copy</string>
    <string name="save">Save</string>
    <string name="search_by">Search By</string>
    <string name="sort_by">Sort By</string>


    <!-- Users Database Values Strings -->
    <string name="age">age</string>
    <string name="age_title">Age:</string>
    <string name="grade">grade</string>
    <string name="grade_title">Grade:</string>
    <string name="name_letter">J</string>
    <string name="organization">Organization</string>
    <string name="user_name">Name</string>

</resources>
