<?xml version="1.0" encoding="utf-8"?>

<!-- Menu For Activity EventsView -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EventsView">

    <!-- Item eventsSortBy -->
    <item
        android:id="@+id/eventsSortBy"
        android:title="@string/sort_by"
        android:icon="@drawable/sort"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <!-- Item eventsSearch -->
    <item
        android:id="@+id/eventsSearch"
        android:title="@string/search_by"
        android:icon="@drawable/search"
        android:orderInCategory="2"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/timeTotalAdded"
        android:title="@string/total_time"
        android:orderInCategory="1"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>
