<?xml version="1.0" encoding="utf-8"?>

<!-- Fist UI For Activity RemindersView -->
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/transparent"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="9dp" >

    <!-- Second UI For Activity RemindersView -->
    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_gravity="center"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="?attr/colorPrimary"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="0dp">

        <!-- Third UI For Activity RemindersView -->
        <RelativeLayout
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dip">

            <!-- TextView remindersNameTitle -->
            <TextView
                android:id="@+id/remindersNameTitle"
                android:text="@string/name_title"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" />

            <!-- TextView remindersName -->
            <TextView
                android:id="@+id/remindersName"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginStart="5dip"
                android:layout_toRightOf="@+id/remindersNameTitle"
                android:layout_toEndOf="@+id/remindersNameTitle"/>

            <!-- TextView remindersDateTitle -->
            <TextView
                android:id="@+id/remindersDateTitle"
                android:text="@string/date_title"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_marginEnd="4dip"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/remindersDate"
                android:layout_toStartOf="@+id/remindersDate" />

            <!-- TextView remindersDate -->
            <TextView
                android:id="@+id/remindersDate"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <!-- TextView remindersLocationTitle -->
            <TextView
                android:id="@+id/remindersLocationTitle"
                android:text="@string/location_title"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:layout_below="@+id/remindersNameTitle" />

            <!-- TextView remindersLocation -->
            <TextView
                android:id="@+id/remindersLocation"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:layout_marginLeft="5dip"
                android:layout_marginStart="5dip"
                android:layout_below="@+id/remindersNameTitle"
                android:layout_toRightOf="@+id/remindersLocationTitle"
                android:layout_toEndOf="@+id/remindersLocationTitle"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.v7.widget.CardView>