<?xml version="1.0" encoding="utf-8"?>

<!-- UI For Activity UsersEdit -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_ui"
    android:background="@color/darkWhite"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dip"
    tools:context=".UsersEdit">

    <!-- CircleImageView usersEditCircleImage -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/usersEditCircleImage"
        android:src="@drawable/white"
        android:onClick="onClickCircleImage"
        android:layout_width="70dip"
        android:layout_height="70dip"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/transparent"/>

    <!-- TextView usersEditNameLetter -->
    <TextView
        android:id="@+id/usersEditNameLetter"
        android:text="@string/name_letter"
        android:textColor="@color/darkRed"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/usersEditCircleImage"
        android:layout_alignRight="@+id/usersEditCircleImage"
        android:layout_alignEnd="@+id/usersEditCircleImage" />

    <!-- MaterialEditText UsersEditName -->
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/usersEditName"
        android:hint="@string/user_name"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="16dip"
        android:layout_marginStart="16dip"
        android:layout_toRightOf="@+id/usersEditCircleImage"
        android:layout_toEndOf="@+id/usersEditCircleImage"
        app:met_baseColor="@color/darkRed"
        app:met_primaryColor="@color/darkRed"
        app:met_floatingLabel="highlight"
        app:met_singleLineEllipsis="true"/>

    <!-- MaterialEditText UsersEditAge -->
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/usersEditAge"
        android:hint="@string/age"
        android:textSize="14sp"
        android:inputType="number"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/usersEditCircleImage"
        android:layout_alignEnd="@+id/usersEditCircleImage"
        android:layout_below="@+id/usersEditCircleImage"
        app:met_baseColor="@color/darkRed"
        app:met_primaryColor="@color/darkRed"
        app:met_floatingLabel="highlight" />

    <!-- MaterialEditText UsersEditGrade -->
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/usersEditGrade"
        android:hint="@string/grade"
        android:textSize="14sp"
        android:inputType="number"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:layout_marginLeft="16dip"
        android:layout_marginStart="16dip"
        android:layout_below="@+id/usersEditCircleImage"
        android:layout_toRightOf="@+id/usersEditAge"
        android:layout_toEndOf="@+id/usersEditAge"
        app:met_baseColor="@color/darkRed"
        app:met_primaryColor="@color/darkRed"
        app:met_floatingLabel="highlight" />

    <!-- MaterialEditText UsersEditOrganization -->
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/usersEditOrganization"
        android:hint="@string/organization"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:layout_marginLeft="16dip"
        android:layout_marginStart="16dip"
        android:layout_below="@+id/usersEditCircleImage"
        android:layout_toRightOf="@+id/usersEditGrade"
        android:layout_toEndOf="@+id/usersEditGrade"
        app:met_baseColor="@color/darkRed"
        app:met_primaryColor="@color/darkRed"
        app:met_floatingLabel="highlight"
        app:met_singleLineEllipsis="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
